# uuid_remap

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  args.rs  chunk.rs  context.ts  detect.rs  getAvatar.ts  main.rs  main.tsx  processer.rs  utils.rs  uuidUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/remapper/: Cargo.toml
src-tauri/remapper/src/: args.rs  content_replace.rs  lib.rs  main.rs  map.rs  mca_file.rs  rename_file.rs  utils.rs  world.rs
src-tauri/src/: lib.rs  main.rs  map.rs  process.rs
src/components/: folderSelect.tsx  languageSwitcher.tsx  remapProgress.tsx  uuidPair.module.css  uuidPair.tsx  uuidTool.tsx
src/i18n/: context.tsx  translations.ts
src/i18n/lang/: en.ts  ja.ts  zh.ts
src/pages/: App.tsx
src/styles/: folderSelect.module.css  global.css  remapProgress.module.css  uuidPair.module.css  uuidTool.module.css
src/utils/: context.ts  getAvatar.ts  ipc.ts  nbt_process.rs  uuidUtils.ts  uuid_tools.rs
