[package]
name = "uuid_remap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
crab_nbt = "0.2.11"
flate2 = "1.1.2"
indicatif = "0.18.0"
inquire = "0.8.0"
mca = "1.1.0"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
