[package]
name = "uuid_remap"
version = "0.2.0"
description = "A UUID remapping tool for Minecraft worlds."
authors = ["peter2500zz"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uuid_remap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
uuid = { version = "1.22.0", features = ["v4"] }
java-properties = "2.0.0"
rayon = "1.11.0"
tauri-plugin-http = "2"
remapper = { path = "remapper" }
walkdir = "2.5.0"
serde_jsonc = "1.0.108"
pathdiff = "0.2.3"

[workspace]
members = [
    "remapper"
]
