[package]
name = "remapper"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
chardetng = "0.1.17"
content_inspector = "0.2.4"
encoding_rs = "0.8.35"
mca = "2.1.2"
quartz_nbt = "0.2.9"
rayon = "1.11.0"
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
walkdir = "2.5.0"
